...
                android:layout_marginStart="72dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/training_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/trainingDate"
                    android:layout_toStartOf="@+id/trainingDate">

                    <de.dreier.mytargets.views.TextInputEditText
                        android:id="@+id/training"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <de.dreier.mytargets.views.selector.StandardRoundSelector
                        android:id="@+id/standardRound"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:id="@+id/change_target_face"
                        style="@style/primaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="start"
                        android:padding="16dp"
...
                        android:id="@+id/practiceLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <de.dreier.mytargets.views.selector.DistanceSelector
                            android:id="@+id/distance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"/>

                        <include layout="@layout/partial_divider_full"/>

                        <de.dreier.mytargets.views.selector.TargetSelector
                            android:id="@+id/target"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"/>

                        <include layout="@layout/partial_divider_full"/>

...
                    android:padding="16dp"
                    android:text="@string/arrow_numbers"/>

                <include layout="@layout/partial_divider_full"/>

                <de.dreier.mytargets.views.selector.EnvironmentSelector
                    android:id="@+id/environment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

            </LinearLayout>

...
