<!--
  ~ Copyright (C) 2018 Florian Dreier
  ~
  ~ This file is part of MyTargets.
  ~
  ~ MyTargets is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License version 2
  ~ as published by the Free Software Foundation.
  ~
  ~ MyTargets is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="72dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="72dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/training_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.dreier.mytargets.views.TextInputEditText
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/indoorPlaceholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="32dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/indoor"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_house"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/shooting_indoor"
                android:textSize="20sp"/>
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/weatherLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/weather"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <ImageButton
                            android:id="@+id/sunny"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/sunny"
                            app:srcCompat="@drawable/ic_sun_outline_48dp"/>

                        <ImageButton
                            android:id="@+id/partlyCloudy"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/partly_cloudy"
                            app:srcCompat="@drawable/ic_partly_cloudy_outline_color_48dp"/>

                        <ImageButton
                            android:id="@+id/cloudy"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/cloudy"
                            app:srcCompat="@drawable/ic_cloudy_outline_48dp"/>

                        <ImageButton
                            android:id="@+id/lightRain"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/light_rain"
                            app:srcCompat="@drawable/ic_light_rain_outline_48dp"/>

                        <ImageButton
                            android:id="@+id/rain"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/rain"
                            app:srcCompat="@drawable/ic_rain_outline_48dp"/>

                    </LinearLayout>

                </LinearLayout>

                <include layout="@layout/partial_divider_full"/>

                <de.dreier.mytargets.views.selector.WindSpeedSelector
                    android:id="@+id/windSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <include layout="@layout/partial_divider_full"/>

                <de.dreier.mytargets.views.selector.WindDirectionSelector
                    android:id="@+id/windDirection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</layout>
