<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 Florian Dreier
  ~
  ~ This file is part of MyTargets.
  ~
  ~ MyTargets is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License version 2
  ~ as published by the Free Software Foundation.
  ~
  ~ MyTargets is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  -->

<resources>
    <!-- Target groups -->
    <string name="target_type_target_archery">Regular</string>
    <string name="target_type_field_archery">Field</string>
    <string name="target_type_3d_archery">3D</string>

    <!-- Target names -->
    <string name="wa_full">WA Full</string>
    <string name="wa_6_ring">WA 6 Ring</string>
    <string name="wa_5_ring">WA 5 Ring</string>
    <string name="wa_3_ring">WA 3 Ring</string>
    <string name="vegas_3_spot">Vegas 3 Spot</string>
    <string name="vertical_3_spot">WA Vertical 3 Spot</string>
    <string name="wa_3_ring_3_spot">WA 3 Ring 3 Spot</string>
    <string name="nfaa_field">NFAA Field</string>
    <string name="nfaa_expert_field">NFAA Expert Field</string>
    <string name="nfaa_hunter">NFAA Hunter</string>
    <string name="nfaa_indoor">NFAA Indoor</string>
    <string name="nfaa_indoor_5_spot">NFAA Indoor 5 Spot</string>
    <string name="worcester_face">Worcester</string>
    <string name="wa_field">WA Field</string>
    <string name="hit_or_miss">Hit or miss</string>
    <string name="asa_3d">3D ASA</string>
    <string name="asa_3d_14">3D ASA 14</string>
    <string name="ibo_3d">3D IBO</string>
    <string name="nfas_3d">3D NFAS</string>
    <string name="dair_3d">3D Dair</string>
    <string name="ifaa_animal">IFAA Animal</string>
    <string name="nfaa_animal">NFAA Animal</string>
    <string name="nfas_field">NFAS Field</string>
    <string name="beursault">Beursault</string>
    <string name="sca_period">SCA Period</string>
    <string name="wa_field_3_spot">WA Field 3 Spot</string>
    <string name="wa_danage_3_spot">WA Danage 3 Spot</string>
    <string name="wa_danage_6_spot">WA Danage 6 Spot</string>
    <string name="dbsc_blowpipe">DBSC Blowpipe</string>
    <string name="fadb_3d">3D FADB</string>

    <!-- Scoring styles -->
    <string name="fcfs_color_reversed">FCFS Color (Reversed 10–1)</string>
    <string name="recurve_style_x_1">Recurve style (X–1)</string>
    <string name="recurve_style_10_1">Recurve style (10–1)</string>
    <string name="recurve_style_x_5">Recurve style (X–5)</string>
    <string name="recurve_style_10_5">Recurve style (10–5)</string>
    <string name="recurve_style_x_6">Recurve style (X–6)</string>
    <string name="recurve_style_10_6">Recurve style (10–6)</string>
    <string name="recurve_style_x_8">Recurve style (X–8)</string>
    <string name="recurve_style_10_8">Recurve style (10–8)</string>
    <string name="compound_style">Compound style</string>
</resources>
